Doing the website responsive

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -24,6 +24,12 @@ section {
     justify-content: center;
 }
 
+@media screen and (max-width: 768px){
+    section{
+        width: auto
+    }
+}
+
 /* POST */
 div .post-box {
     display: flex;
